Completed the map feature
